--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
       <section class="hero_section">
         <div class="container hero_wrapper">
           <div class="hero_title">
-            <h1>Empowering teams with the freedom</h1>
-            <p>Own the unlimited power of the web development</p>
+            <p class="title">Empowering teams with the freedom</p>
+            <p class="sub_title">
+              Own the unlimited power of the web development
+            </p>
             <div class="title_link">
               <a class="btn btn_primary" href="#"
                 ><i class="fa-solid fa-circle-play"></i>Play Video</a
@@ -110,27 +112,45 @@
           </div>
           <div class="key_benefits">
             <div class="benefit">
-              <img src="./assets/img/icons/responsive.svg" alt="responsive"></img>
+              <img src="./assets/img/icons/responsive.svg" alt="responsive" />
               <h3>Responsive</h3>
-              <p>It is a long established fact that a reader will be distarcted by the readable content of a page when looking at its layout</p>
+              <p>
+                It is a long established fact that a reader will be distarcted
+                by the readable content of a page when looking at its layout
+              </p>
               <a class="learn_more" href="#">Learn more</a>
             </div>
             <div class="benefit">
-              <img src="./assets/img/icons/customizable.svg" alt="customizable">
+              <img
+                src="./assets/img/icons/customizable.svg"
+                alt="customizable"
+              />
               <h3>Customizable</h3>
-              <p>It is a long established fact that a reader will be distarcted byreadable content of a page when looking at its layout</p>
+              <p>
+                It is a long established fact that a reader will be distarcted
+                byreadable content of a page when looking at its layout
+              </p>
               <a class="learn_more" href="#">Learn more</a>
             </div>
             <div class="benefit">
-              <img src="./assets/img/icons/premium.svg" alt="premium">
+              <img src="./assets/img/icons/premium.svg" alt="premium" />
               <h3>Premium <span class="sketch">sketch</span></h3>
-              <p>It is a long established fact that a reader will be distarcted by the readable content of a page when looking at its layout</p>
+              <p>
+                It is a long established fact that a reader will be distarcted
+                by the readable content of a page when looking at its layout
+              </p>
               <a class="learn_more" href="#">Learn more</a>
             </div>
             <div class="benefit">
-              <img src="./assets/img/icons/documentation.svg" alt="documentation">
+              <img
+                src="./assets/img/icons/documentation.svg"
+                alt="documentation"
+              />
               <h3>Documentation</h3>
-              <p>It is a long established fact that a reader will be distarcted by the readable content of a page when looking at its layout</p>
+              <p>
+                It is a long established fact that a reader will be distarcted
+                by the readable content of a page when looking at its layout
+              </p>
               <a class="learn_more" href="#">Learn more</a>
             </div>
           </div>
@@ -138,19 +158,126 @@
       </section>
       <section class="banner_one">
         <div class="container banner_one_wrapper">
-          <div class="banner_one_title">
-              <h2>Front makes you look at things from a different prospectives</h2>
-              <a class="btn btn_primary" href="#"><i class="fa-solid fa-circle-play"></i>Play Video</a>
+          <div class="banner_one_header">
+            <p class="title">
+              Front makes you look at things from a different prospectives
+            </p>
+            <a class="btn btn_primary" href="#"
+              ><i class="fa-solid fa-circle-play"></i>Play Video</a
+            >
           </div>
           <div class="banner_one_image">
-            <img src="./assets/img/banners/banner_one.jpg" alt="">
+            <img src="./assets/img/banners/banner_one.jpg" alt="first banner" />
           </div>
         </div>
       </section>
-
+      <section class="why_front_section">
+        <div class="container why_front_wrapper">
+          <div class="why_front_header">
+            <h2>Why front?</h2>
+            <p>
+              Front is an incredibly beautiful, fully responsive, and
+              mobile-first projects on the web - it is the starting point for
+              creative sites
+            </p>
+          </div>
+          <div class="why_front">
+            <div class="basic_elements">
+              <div class="circle_wrapper">
+                <span class="wing invisible"></span>
+                <div class="circle">
+                  <div class="inner_circle"></div>
+                </div>
+                <span class="wing"></span>
+              </div>
+              <span>Basic elements</span>
+            </div>
+            <div class="components">
+              <div class="circle_wrapper">
+                <span class="wing"></span>
+                <div class="circle">
+                  <div class="inner_circle"></div>
+                </div>
+                <span class="wing"></span>
+              </div>
+              <span>Components</span>
+            </div>
+            <div class="combined_components">
+              <div class="circle_wrapper">
+                <span class="wing"></span>
+                <div class="circle">
+                  <div class="inner_circle"></div>
+                </div>
+                <span class="wing"></span>
+              </div>
+              <span>Combined components</span>
+            </div>
+            <div class="page_layout">
+              <div class="circle_wrapper">
+                <span class="wing"></span>
+                <div class="circle">
+                  <div class="inner_circle"></div>
+                </div>
+                <span class="wing invisible"></span>
+              </div>
+              <span>Page layouts</span>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="banner_two">
+        <div class="container">
+          <img src="./assets/img/banners/banner_two.jpg" alt="second banner" />
+        </div>
+      </section>
+      <section class="hubspot_section">
+        <div class="container hubspot_wrapper">
+          <div class="hubspot_image">
+            <div class="upper_image image_wrapper">
+              <img src="./assets/img/people/woman_three.jpg" alt="image" />
+            </div>
+            <div class="image_layer image_wrapper">
+              <img src="./assets/img/abstract/dots.svg" alt="image" />
+            </div>
+          </div>
+          <div class="hubspot_text">
+            <div class="logo">
+              <img src="./assets/img/company_logos/hubspot.svg" alt="hubspot" />
+            </div>
+            <p>
+              The template is really nice and offers quite a large set of
+              options. it's beautiful and the coding is done quickly and
+              seamlessy. Thank you!
+            </p>
+            <h4>Christina Kray</h4>
+            <span>Executive Director</span>
+          </div>
+        </div>
+      </section>
+      <section class="partner">
+        <div class="container partner_wrapper">
+          <div class="partner_title">
+            <h2>Trusted by world's best</h2>
+          </div>
+          <div class="partner_logo">
+            <img
+              src="./assets/img/company_logos/weebly.svg"
+              alt="weebly logo"
+            />
+            <img src="./assets/img/company_logos/uber.svg" alt="uber logo" />
+            <img src="./assets/img/company_logos/slack.svg" alt="slack logo" />
+            <img
+              src="./assets/img/company_logos/airbnb.svg"
+              alt="airbnb logo"
+            />
+            <img
+              src="./assets/img/company_logos/spotify.svg"
+              alt="spotify logo"
+            />
+          </div>
+        </div>
+      </section>
     </main>
-    <footer>
-
-    </footer>
+    <footer></footer>
   </body>
 </html>
