--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               Own the unlimited power of the web development
             </p>
             <div class="title_link">
-              <a class="btn btn_primary" href="#"
+              <a class="btn btn_primary" href="#playVideo"
                 ><i class="fa-solid fa-circle-play"></i>Play Video</a
               >
               <a class="learn_more" href="#">Learn more</a>
@@ -165,7 +165,7 @@
             <p class="title">
               Front makes you look at things from a different prospectives
             </p>
-            <a class="btn btn_primary" href="#"
+            <a class="btn btn_primary" href="#playVideo"
               ><i class="fa-solid fa-circle-play"></i>Play Video</a
             >
           </div>
@@ -230,7 +230,7 @@
         </div>
       </section>
       <!-- banner two section  -->
-      <div class="banner_two">
+      <div id="playVideo" class="banner_two">
         <div class="container banner_two_wrapper">
           <img src="./assets/img/banners/banner_two.jpg" alt="second banner" />
           <span class="banner_two_icon">
@@ -348,13 +348,17 @@
       <section class="hire_us_section">
         <div class="container hire_us_wrapper">
           <div class="hire_us">
-            <h2>Hire Us</h2>
-            <p class="sub_title">Whatever your goal - we will get you there</p>
-            <span class="wing line"></span>
-            <p class="description">
-              "I love front! I love the ease of use, I love the fact that I have
-              total creative freedom..."
-            </p>
+            <div class="hire_us_header">
+              <h2>Hire Us</h2>
+              <p class="sub_title">
+                Whatever your goal - we will get you there
+              </p>
+              <span class="wing line"></span>
+              <p class="description">
+                "I love front! I love the ease of use, I love the fact that I
+                have total creative freedom..."
+              </p>
+            </div>
             <div class="hire_us_footer">
               <h4>Charlotte Moore</h4>
               <span>Head of Commercials, Slack</span>
