--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             </p>
           </div>
           <div class="why_front">
-            <div class="basic_elements">
+            <div class="basic_elements reason">
               <div class="circle_wrapper">
                 <span class="wing invisible"></span>
                 <div class="circle">
@@ -196,7 +196,7 @@
               </div>
               <span>Basic elements</span>
             </div>
-            <div class="components">
+            <div class="components reason">
               <div class="circle_wrapper">
                 <span class="wing"></span>
                 <div class="circle">
@@ -206,7 +206,7 @@
               </div>
               <span>Components</span>
             </div>
-            <div class="combined_components">
+            <div class="combined_components reason">
               <div class="circle_wrapper">
                 <span class="wing"></span>
                 <div class="circle">
@@ -216,7 +216,7 @@
               </div>
               <span>Combined components</span>
             </div>
-            <div class="page_layout">
+            <div class="page_layout reason">
               <div class="circle_wrapper">
                 <span class="wing"></span>
                 <div class="circle">
@@ -473,7 +473,7 @@ Tell us more about your project, needs, and timeline, please...</textarea
             </ul>
           </div>
           <div class="links">
-            <div class="company">
+            <div class="company group">
               <h3>Company</h3>
               <ul>
                 <li><a href="#">About</a></li>
@@ -487,7 +487,7 @@ Tell us more about your project, needs, and timeline, please...</textarea
                 <li><a href="#">Hire&nbsp;us</a></li>
               </ul>
             </div>
-            <div class="features">
+            <div class="features group">
               <h3>Features</h3>
               <ul>
                 <li><a href="#">Press</a></li>
@@ -496,7 +496,7 @@ Tell us more about your project, needs, and timeline, please...</textarea
                 <li><a href="#">Pricing</a></li>
               </ul>
             </div>
-            <div class="documentation">
+            <div class="documentation group">
               <h3>Documentation</h3>
               <ul>
                 <li><a href="#">Support</a></li>
@@ -506,7 +506,7 @@ Tell us more about your project, needs, and timeline, please...</textarea
                 <li><a href="#">Tech Requirements</a></li>
               </ul>
             </div>
-            <div class="resources">
+            <div class="resources group">
               <h3>Resources</h3>
               <ul>
                 <li><i class="fa-solid fa-circle-info"></i>Help</li>
