--- a/index.html
+++ b/index.html
@@ -547,8 +547,8 @@ Tell us more about your project, needs, and timeline, please...</textarea
           </div>
           <div class="copyright">
             <span
-              ><i class="fa-regular fa-copyright"></i> Front.2024 Responsive
-              designs. All rights reserved.</span
+              ><i class="fa-regular fa-copyright"></i> Front 2024 - Responsive
+              designs. Designed by Roland</span
             >
             <p>
               When you visit or interact with our sites, services or tools, we
